--- a/.env.example
+++ b/.env.example
@@ -15,13 +15,17 @@ APP_MAINTENANCE_DRIVER=file
 
 BCRYPT_ROUNDS=12
 
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=0.2
+SENTRY_ENABLE_LOGS=true
 LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_STACK=single,sentry_logs
+
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=
 DB_PORT=3306
 DB_DATABASE=deyvid87_emprega_dev
 DB_USERNAME=deyvid87_emprega_dev
@@ -47,13 +51,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_MAILER=smtp
+MAIL_HOST=mailhog
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="noreply@empregapaulinia.com.br"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
