--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ APP_MAINTENANCE_DRIVER=file
 
 BCRYPT_ROUNDS=12
 
-SENTRY_LARAVEL_DSN=
+SENTRY_LARAVEL_DSN=https://b0dc8370c30db21cf4e050efd586fbe6@o4510618291470336.ingest.us.sentry.io/4510618297303040
 SENTRY_TRACES_SAMPLE_RATE=0.2
 SENTRY_ENABLE_LOGS=true
 LOG_CHANNEL=stack
@@ -68,6 +68,5 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-# Google reCAPTCHA v2
-RECAPTCHA_SITE_KEY=
-RECAPTCHA_SECRET_KEY=
+RECAPTCHA_SITE_KEY=6LeOsUgsAAAAADd5rtvAtYEtuuhKyDLPyHYxo_p1
+RECAPTCHA_SECRET_KEY=6LeOsUgsAAAAACbpLleXLI-kCK7UPzXOXcQUwQqt
